# grant-finder

./: .dockerignore  .env.example  .gitignore  .mcp.json  BENCHMARK.md  BUILDER_RULES.md  BUILD_PLAN.md  BUILD_REPORT.md  CONTEXT.md  DESIGN.md  Dockerfile  PRD.md  README.md  SECURITY.md  check.sh  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: __init__.py  db.py  mapper.py  models.py  orchestrator.py  sources.yaml
app/agents/: __init__.py  client.py  drafter.py  match.py  parsing.py  prompts.py  verify.py
app/discovery/: __init__.py  curated.py  grants_gov.py  service.py
app/web/: __init__.py  app.py  forms.py  guard.py  pipeline.py
app/web/templates/: base.html  error.html  form.html  results.html
design-samples/: seam-options.html
eval/: __init__.py  ablation.py  adversarial.py  cases.py  cases_adversarial.py  cases_education.py  cases_legal.py  cases_medical.py  judge.py  run.py  scorer.py  taxonomy.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Field.tsx  Loading.tsx  Results.tsx  Wizard.tsx  steps.tsx
frontend/src/lib/: api.ts
mcp_verify/: __init__.py  core.py
scripts/: smoke_agents.py
tests/: conftest.py  fakes.py  test_agents.py  test_db.py  test_discovery.py  test_discovery_service.py  test_eval.py  test_guard.py  test_mapper.py  test_models.py  test_orchestrator.py  test_smoke.py  test_verify_core.py  test_web.py
tests/fixtures/: curated_fixture.yaml
