[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-grant-navigator"
version = "0.1.0"
description = "Multi-agent funding-match system for solar nonprofits"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21", "ruff>=0.15"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Defaults (pyflakes F, pycodestyle E) plus import-sorting (I) and bugbears (B).
extend-select = ["I", "B"]

[tool.setuptools.packages.find]
include = ["app*", "mcp_verify*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
